# HideProcessR3

./: Cargo.toml  README.MD
hook/: Cargo.toml
hook/src/: lib.rs
src/: main.rs
src/chainbreak/: mod.rs
src/inject/: mod.rs
src/installsrv/: mod.rs
src/process/: mod.rs  process_base.rs
src/utils/: mod.rs
