[package]
name = "hide_process_r3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.56.0", features = ["Win32_System_Kernel", "Win32_System_Threading", "Wdk_System_Threading", "Win32_System_LibraryLoader", "Wdk_System_SystemServices", "Win32_System_Diagnostics_Debug", "Wdk_System_SystemInformation", "Win32_System_WindowsProgramming"] }
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
dll-syringe = "0.15.2"

[workspace]

members = [
    "hook"
]
