[package]
name = "hook"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
retour = { version = "0.3.1", features = ["static-detour"] }
windows = { version = "0.56.0", features = ["Win32_System_Kernel", "Win32_System_Threading", "Wdk_System_Threading", "Win32_System_LibraryLoader", "Wdk_System_SystemServices", "Win32_System_Diagnostics_Debug", "Wdk_System_SystemInformation", "Win32_System_WindowsProgramming", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging"] }

[lib]
crate-type = ["cdylib"]
